Refactored clearance system
